package historical

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/abdoElHodaky/tradSys/proto/marketdata"
	"go.uber.org/zap"
)

// HistoricalDataConfig contains configuration for the historical data service
type HistoricalDataConfig struct {
	// DataDir is the directory where historical data is stored
	DataDir string
	
	// CacheSize is the size of the cache in number of candles
	CacheSize int
	
	// MaxConcurrentRequests is the maximum number of concurrent requests
	MaxConcurrentRequests int
	
	// DefaultTimeframe is the default timeframe for historical data
	DefaultTimeframe string
}

// DefaultHistoricalDataConfig returns the default historical data configuration
func DefaultHistoricalDataConfig() *HistoricalDataConfig {
	return &HistoricalDataConfig{
		DataDir:               "/var/lib/tradsys/historical",
		CacheSize:             10000,
		MaxConcurrentRequests: 5,
		DefaultTimeframe:      "1h",
	}
}

// HistoricalDataService provides access to historical market data
type HistoricalDataService struct {
	logger *zap.Logger
	config *HistoricalDataConfig
	
	// Cache of historical data
	cache     map[string]map[string][]*marketdata.Candle
	cacheMu   sync.RWMutex
	
	// Loader for historical data
	loader *HistoricalDataLoader
	
	// Analyzer for historical data
	analyzer *HistoricalDataAnalyzer
	
	// Semaphore for limiting concurrent requests
	semaphore chan struct{}
}

// NewHistoricalDataService creates a new historical data service
func NewHistoricalDataService(config *HistoricalDataConfig, logger *zap.Logger) (*HistoricalDataService, error) {
	if config == nil {
		config = DefaultHistoricalDataConfig()
	}
	
	// Create the loader
	loader, err := NewHistoricalDataLoader(config, logger)
	if err != nil {
		return nil, fmt.Errorf("failed to create historical data loader: %w", err)
	}
	
	// Create the analyzer
	analyzer, err := NewHistoricalDataAnalyzer(logger)
	if err != nil {
		return nil, fmt.Errorf("failed to create historical data analyzer: %w", err)
	}
	
	return &HistoricalDataService{
		logger:    logger,
		config:    config,
		cache:     make(map[string]map[string][]*marketdata.Candle),
		loader:    loader,
		analyzer:  analyzer,
		semaphore: make(chan struct{}, config.MaxConcurrentRequests),
	}, nil
}

// GetHistoricalData gets historical data for a symbol and timeframe
func (s *HistoricalDataService) GetHistoricalData(
	ctx context.Context,
	symbol string,
	timeframe string,
	start time.Time,
	end time.Time,
) ([]*marketdata.Candle, error) {
	// Check the cache first
	s.cacheMu.RLock()
	symbolCache, symbolExists := s.cache[symbol]
	if symbolExists {
		timeframeCache, timeframeExists := symbolCache[timeframe]
		if timeframeExists {
			// Check if the cache covers the requested range
			if len(timeframeCache) > 0 &&
				!timeframeCache[0].Timestamp.AsTime().After(start) &&
				!timeframeCache[len(timeframeCache)-1].Timestamp.AsTime().Before(end) {
				
				// Filter the cache to the requested range
				var result []*marketdata.Candle
				for _, candle := range timeframeCache {
					candleTime := candle.Timestamp.AsTime()
					if !candleTime.Before(start) && !candleTime.After(end) {
						result = append(result, candle)
					}
				}
				
				s.cacheMu.RUnlock()
				return result, nil
			}
		}
	}
	s.cacheMu.RUnlock()
	
	// Acquire a semaphore slot
	select {
	case s.semaphore <- struct{}{}:
		// Got a slot
		defer func() { <-s.semaphore }()
	case <-ctx.Done():
		return nil, ctx.Err()
	}
	
	// Load the data
	candles, err := s.loader.LoadHistoricalData(ctx, symbol, timeframe, start, end)
	if err != nil {
		return nil, fmt.Errorf("failed to load historical data: %w", err)
	}
	
	// Update the cache
	s.cacheMu.Lock()
	if _, exists := s.cache[symbol]; !exists {
		s.cache[symbol] = make(map[string][]*marketdata.Candle)
	}
	s.cache[symbol][timeframe] = candles
	s.cacheMu.Unlock()
	
	return candles, nil
}

// AnalyzeHistoricalData analyzes historical data
func (s *HistoricalDataService) AnalyzeHistoricalData(
	ctx context.Context,
	symbol string,
	timeframe string,
	start time.Time,
	end time.Time,
	indicators []string,
) (*HistoricalDataAnalysis, error) {
	// Get the historical data
	candles, err := s.GetHistoricalData(ctx, symbol, timeframe, start, end)
	if err != nil {
		return nil, fmt.Errorf("failed to get historical data: %w", err)
	}
	
	// Analyze the data
	analysis, err := s.analyzer.AnalyzeData(candles, indicators)
	if err != nil {
		return nil, fmt.Errorf("failed to analyze historical data: %w", err)
	}
	
	return analysis, nil
}

// ClearCache clears the cache
func (s *HistoricalDataService) ClearCache() {
	s.cacheMu.Lock()
	defer s.cacheMu.Unlock()
	
	s.cache = make(map[string]map[string][]*marketdata.Candle)
}

// HistoricalDataLoader loads historical data
type HistoricalDataLoader struct {
	logger *zap.Logger
	config *HistoricalDataConfig
}

// NewHistoricalDataLoader creates a new historical data loader
func NewHistoricalDataLoader(config *HistoricalDataConfig, logger *zap.Logger) (*HistoricalDataLoader, error) {
	if config == nil {
		config = DefaultHistoricalDataConfig()
	}
	
	return &HistoricalDataLoader{
		logger: logger,
		config: config,
	}, nil
}

// LoadHistoricalData loads historical data for a symbol and timeframe
func (l *HistoricalDataLoader) LoadHistoricalData(
	ctx context.Context,
	symbol string,
	timeframe string,
	start time.Time,
	end time.Time,
) ([]*marketdata.Candle, error) {
	// TODO: Implement loading from database or file
	// This is a placeholder implementation
	
	// Create some sample data
	var candles []*marketdata.Candle
	
	// Generate candles at the specified timeframe
	var interval time.Duration
	switch timeframe {
	case "1m":
		interval = time.Minute
	case "5m":
		interval = 5 * time.Minute
	case "15m":
		interval = 15 * time.Minute
	case "1h":
		interval = time.Hour
	case "4h":
		interval = 4 * time.Hour
	case "1d":
		interval = 24 * time.Hour
	default:
		return nil, fmt.Errorf("unsupported timeframe: %s", timeframe)
	}
	
	// Generate candles
	for t := start; !t.After(end); t = t.Add(interval) {
		candle := &marketdata.Candle{
			Symbol:    symbol,
			Timeframe: timeframe,
			Open:      100.0,
			High:      105.0,
			Low:       95.0,
			Close:     102.0,
			Volume:    1000.0,
		}
		
		// Set the timestamp
		timestamp, err := time.Parse(time.RFC3339, t.Format(time.RFC3339))
		if err != nil {
			return nil, fmt.Errorf("failed to parse timestamp: %w", err)
		}
		
		candle.Timestamp = timestamppb.New(timestamp)
		
		candles = append(candles, candle)
	}
	
	return candles, nil
}

// HistoricalDataAnalyzer analyzes historical data
type HistoricalDataAnalyzer struct {
	logger *zap.Logger
}

// NewHistoricalDataAnalyzer creates a new historical data analyzer
func NewHistoricalDataAnalyzer(logger *zap.Logger) (*HistoricalDataAnalyzer, error) {
	return &HistoricalDataAnalyzer{
		logger: logger,
	}, nil
}

// AnalyzeData analyzes historical data
func (a *HistoricalDataAnalyzer) AnalyzeData(
	candles []*marketdata.Candle,
	indicators []string,
) (*HistoricalDataAnalysis, error) {
	// TODO: Implement analysis
	// This is a placeholder implementation
	
	analysis := &HistoricalDataAnalysis{
		Symbol:     candles[0].Symbol,
		Timeframe:  candles[0].Timeframe,
		StartTime:  candles[0].Timestamp.AsTime(),
		EndTime:    candles[len(candles)-1].Timestamp.AsTime(),
		NumCandles: len(candles),
		Indicators: make(map[string][]float64),
	}
	
	// Calculate indicators
	for _, indicator := range indicators {
		switch indicator {
		case "sma":
			analysis.Indicators["sma"] = a.calculateSMA(candles, 20)
		case "ema":
			analysis.Indicators["ema"] = a.calculateEMA(candles, 20)
		case "rsi":
			analysis.Indicators["rsi"] = a.calculateRSI(candles, 14)
		default:
			a.logger.Warn("Unsupported indicator", zap.String("indicator", indicator))
		}
	}
	
	return analysis, nil
}

// calculateSMA calculates the Simple Moving Average
func (a *HistoricalDataAnalyzer) calculateSMA(candles []*marketdata.Candle, period int) []float64 {
	// TODO: Implement SMA calculation
	// This is a placeholder implementation
	
	result := make([]float64, len(candles))
	for i := range candles {
		result[i] = candles[i].Close
	}
	
	return result
}

// calculateEMA calculates the Exponential Moving Average
func (a *HistoricalDataAnalyzer) calculateEMA(candles []*marketdata.Candle, period int) []float64 {
	// TODO: Implement EMA calculation
	// This is a placeholder implementation
	
	result := make([]float64, len(candles))
	for i := range candles {
		result[i] = candles[i].Close
	}
	
	return result
}

// calculateRSI calculates the Relative Strength Index
func (a *HistoricalDataAnalyzer) calculateRSI(candles []*marketdata.Candle, period int) []float64 {
	// TODO: Implement RSI calculation
	// This is a placeholder implementation
	
	result := make([]float64, len(candles))
	for i := range candles {
		result[i] = 50.0
	}
	
	return result
}

// HistoricalDataAnalysis contains the results of historical data analysis
type HistoricalDataAnalysis struct {
	Symbol     string
	Timeframe  string
	StartTime  time.Time
	EndTime    time.Time
	NumCandles int
	Indicators map[string][]float64
}

